--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiveTrace</title>
     <link rel="stylesheet" href="/css/style.css">
